sync changed up css

--- a/index.html
+++ b/index.html
@@ -82,68 +82,84 @@
 
 
     <div class="event">
-        <h2><span style="color:#2f5496">NwHacks</span></h2>
+        <div id="eventblurb">
+            <h2><span>NwHacks</span></h2>
 
-        <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023734-1.png" 
-            style="float:right; height:150px; margin:10px; width:150px" />
-            <a href="https://www.nwhacks.io/">NwHacks</a> is Western Canada's largest hackathon, attracting over 1200 participants in 2021. In 2021, they had over 200 projects, 45 mentors, and dozens of events. Their sponsors have included Amazon, Microsoft, TTT Studios, Kabam, and Deloitte. With a solid social media following, this will be a great way to start off your year!</p>
+            <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023734-1.png" 
+                style="float:right; height:150px; margin:10px; width:150px" />
+                <a href="https://www.nwhacks.io/">NwHacks</a> is Western Canada's largest hackathon, attracting over 1200 participants in 2021. In 2021, they had over 200 projects, 45 mentors, and dozens of events. Their sponsors have included Amazon, Microsoft, TTT Studios, Kabam, and Deloitte. With a solid social media following, this will be a great way to start off your year!</p>
+            </div>
+        
+        <div id="eventblurb">
+                <h2><span>UofT Hacks</span></h2>
 
-        <h2><span style="color:#2f5496">UofT Hacks</span></h2>
-
-        <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-2.png" 
+            <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-2.png" 
             style="float:left; height:140px; margin:10px; width:140px" />For the 9th consecutive year, Canada's first student-run hackathon, 
             <a href="http://uofthacks.com/">UofT Hacks</a>, will bring together 500 innovators, technology enthusiasts, designers, and entrepreneurs in a thrilling competition where they will embark on a journey to build unique and impactful projects. Sponsors include Amazon, Ubisoft, FDM, Questrade, and Google Cloud.</p>
+        </div>
 
-        <h2><span style="color:#2f5496">Hack the Valley</span><img 
+        <div id="eventblurb">
+
+        <h2><span">Hack the Valley</span><img 
             src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-3.png" 
             style="float:right; height:200px; margin:10px; width:200px" /></h2>
 
         <p><a href="http://hackthevalley.io/">Hack the Valley</a> hosted by University of Toronto Scarborough is an in-person hackathon that aims to connect 750 innovative and creative developers, designers, and creators for 36 hours of hacking. Run entirely by University of Toronto Students, the event consists of 4 areas for creation: Health, Nature, Technology, and Discovery. Sponsors include Amazon, TD, Accedo, Scotiabank, University of Toronto Scarborough, Loblaw Companies Limited, and Xero. &nbsp;</p>
 
 
-        <h2><span style="color:#2f5496">Hack the Pulse</span></h2>
+        <div id="eventblurb">
 
-        <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-4.png" 
-            style="float:left; height:138px; margin:10px; width:200px" />
-            <a href="http://hack-the-pulse.devpost.com/">Hack&nbsp;the Pulse 2022</a>&nbsp;will be <a href="http://mini.xdhacks.com/vancouver/">XdHacks Mini Vancouver</a>&rsquo;s first event of 2022. Within the span of 36 hours, teams will work together to develop digital ideas aimed towards helping confront healthcare challenges that societies encounter today. The event plans to bring together over 100 high school students from across Canada to gather for a fun weekend of hacking and networking. Last year, XdHacks Mini hosted Securehacks 2021 and <a href="http://mini.xdhacks.com/vancouver/climate-code">Climate Code 2021</a>.</p>
+            <h2><span>Hack the Pulse</span></h2>
 
+            <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-4.png" 
+                style="float:left; height:138px; margin:10px; width:200px" />
+                <a href="http://hack-the-pulse.devpost.com/">Hack&nbsp;the Pulse 2022</a>&nbsp;will be <a href="http://mini.xdhacks.com/vancouver/">XdHacks Mini Vancouver</a>&rsquo;s first event of 2022. Within the span of 36 hours, teams will work together to develop digital ideas aimed towards helping confront healthcare challenges that societies encounter today. The event plans to bring together over 100 high school students from across Canada to gather for a fun weekend of hacking and networking. Last year, XdHacks Mini hosted Securehacks 2021 and <a href="http://mini.xdhacks.com/vancouver/climate-code">Climate Code 2021</a>.</p>
+            </div>
 
-        <h2><span style="color:#2f5496">Cmd-f 2022</span>
-            <img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-5.png" 
-            style="float:right; height:167px; margin:10px; width:200px" /></h2>
+        <div id="eventblurb">
 
-        <p><a href="http://cmd-f.nwplus.io/">Cmd-f 2022</a> will be an event held on International Women's Day. It'll be British Columbia&rsquo;s first and largest all-women hackathon, helping women explore new technologies and celebrate women in tech! Cmd-f was created to help break stereotypes and create a safe space for women to learn new skills, build confidence, and discover a creative community.</p>
+        <h2><span>Cmd-f 2022</span>
+                <img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-5.png" 
+                style="float:right; height:167px; margin:10px; width:200px" /></h2>
 
+            <p><a href="http://cmd-f.nwplus.io/">Cmd-f 2022</a> will be an event held on International Women's Day. It'll be British Columbia&rsquo;s first and largest all-women hackathon, helping women explore new technologies and celebrate women in tech! Cmd-f was created to help break stereotypes and create a safe space for women to learn new skills, build confidence, and discover a creative community.</p>
+        </div>
 
+        <div id="eventblurb">
+            <h2><span>Jam Hacks 6</span></h2>
 
-        <h2><span style="color:#2f5496">Jam Hacks 6</span></h2>
+            <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-6.png" 
+                style="float:left; height:120px; margin:10px; width:199px" />
+                <a href="http://jamhacks.ca/">Jam Hacks 6</a> is Waterloo's largest high school hackathon! JAMHacks 6 will take place virtually again in 2022 May, exact date TBD. Last year, JamHacks brought together 300 students from high schools all over North America for a full 24 hours of learning and creating! Sponsors include Toyota Motor Manufacturing, Quantstamp, University of Waterloo, Bestbuy, Hestia Academy, and Best Buy.</p>
+            </div>
 
-        <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-6.png" 
-            style="float:left; height:120px; margin:10px; width:199px" />
-            <a href="http://jamhacks.ca/">Jam Hacks 6</a> is Waterloo's largest high school hackathon! JAMHacks 6 will take place virtually again in 2022 May, exact date TBD. Last year, JamHacks brought together 300 students from high schools all over North America for a full 24 hours of learning and creating! Sponsors include Toyota Motor Manufacturing, Quantstamp, University of Waterloo, Bestbuy, Hestia Academy, and Best Buy.</p>
+        <div id="eventblurb">
 
+            <h2><span>Hack the North</span><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-7.png" 
+                style="float:right; height:162px; margin:10px; width:170px" /></h2>
 
-        <h2><span style="color:#2f5496">Hack the North</span><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-7.png" 
-            style="float:right; height:162px; margin:10px; width:170px" /></h2>
+            <p><a href="http://hackthenorth.com/">Hack the North</a> is Canada's biggest hackathon. Over 3000 students across the globe compete in this prestigious event for an unforgettable 36 hours. Hack the North runs dozens of workshops and events in the leadup to their event. Known for their quality of events, you can&rsquo;t go wrong attending Hack the North 2022. Sponsors include Loblaw Digital, Facebook, Cockroach Labs, Hoostsuite, and Deloitte. &nbsp;</p>
+        </div>
 
-        <p><a href="http://hackthenorth.com/">Hack the North</a> is Canada's biggest hackathon. Over 3000 students across the globe compete in this prestigious event for an unforgettable 36 hours. Hack the North runs dozens of workshops and events in the leadup to their event. Known for their quality of events, you can&rsquo;t go wrong attending Hack the North 2022. Sponsors include Loblaw Digital, Facebook, Cockroach Labs, Hoostsuite, and Deloitte. &nbsp;</p>
+        <div id="eventblurb">
+            <h2><span>McGill Physics Hackathon</span></h2>
 
+            <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-8.png" 
+                style="float:left; height:175px; margin:10px; width:175px" />At its core, the <a href="http://www.physics.mcgill.ca/hackathon/">McGill Physics Hackathon</a> is a friendly computer programming competition. The goal is simple: over a 24-hour period, in a team of 2-5 people, put together some project which involves scientific computing and the physical sciences! There are no themes; the goal is to have fun and be creative. We want to welcome everyone into the wonderful world of scientific computing!</p>
+        </div>
 
-        <h2><span style="color:#2f5496">McGill Physics Hackathon</span></h2>
+        <div id="eventblurb">
 
-        <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-8.png" 
-            style="float:left; height:175px; margin:10px; width:175px" />At its core, the <a href="http://www.physics.mcgill.ca/hackathon/">McGill Physics Hackathon</a> is a friendly computer programming competition. The goal is simple: over a 24-hour period, in a team of 2-5 people, put together some project which involves scientific computing and the physical sciences! There are no themes; the goal is to have fun and be creative. We want to welcome everyone into the wonderful world of scientific computing!</p>
+            <h2><span>Hack Western 8</span>
+                <img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-9.png" 
+                style="float:right; height:175px; margin:10px; width:175px" /></h2>
 
-
-        <h2><span style="color:#2f5496">Hack Western 8</span>
-            <img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-9.png" 
-            style="float:right; height:175px; margin:10px; width:175px" /></h2>
-
-        <p><a href="http://www.ivey.uwo.ca/scotiabank-digital-banking-lab/outreach/hackathon/">Hack Western</a> is an annual, student-run hackathon at Western University.' Students collaborate in teams of up to 4 to build web, mobile and hardware projects, while participating in workshops, learning from mentors and competing for prizes. Support from the Scotiabank Digital Banking Lab provides hackathon participants with the opportunity to explore digital disruption in the financial services industry, and delve deeper into topics ranging from user-centered design to cryptocurrencies.</p>
+            <p><a href="http://www.ivey.uwo.ca/scotiabank-digital-banking-lab/outreach/hackathon/">Hack Western</a> is an annual, student-run hackathon at Western University.' Students collaborate in teams of up to 4 to build web, mobile and hardware projects, while participating in workshops, learning from mentors and competing for prizes. Support from the Scotiabank Digital Banking Lab provides hackathon participants with the opportunity to explore digital disruption in the financial services industry, and delve deeper into topics ranging from user-centered design to cryptocurrencies.</p>
+    </div>
         
     </div>
 
-    <p>If you would like your event to be added to this list, please email <a href="mailto:victor@xdhacks.com">victor@xdhacks.com</a> and I'd be happy to add you to the list! Some other hackathons that may be happening this year include HackED, McHacks, DeltaHacks, TechNova, NSBEHacks, UOttawa Hacks, MacHacks, SheHacks, and HackConcordia. More information will be added'if / when it is confirmed that these hackathons will be taking place.'</p>
+    <p>If you would like your event to be added to this list, please <a href="mailto:victork.zheng@mail.utoronto.ca">email me</a> and I'd be happy to add you to the list! Some other hackathons that may be happening this year include HackED, McHacks, DeltaHacks, TechNova, NSBEHacks, UOttawa Hacks, MacHacks, SheHacks, and HackConcordia. More information will be added if / when it is confirmed that these hackathons will be taking place.</p>
 
 
 </body>
