finished css idea

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 
-    <p>When&rsquo;s the next hackathon? Why should I attend? Here is a comprehensive breakdown of Canadian university and high school hackathons for 2022.</p>
+    <h3>When's the next hackathon? Why should I attend? Here is a comprehensive breakdown of Canadian university and high school hackathons for 2022.</h3>
 
 
     <div class="table">
