move images to the right and added new images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </head>
 <body>
 
-
     <h3>When's the next hackathon? Why should I attend? Here is a comprehensive breakdown of Canadian university and high school hackathons for 2022.</h3>
 
 
@@ -94,15 +93,14 @@
                 <h2><span>UofT Hacks</span></h2>
 
             <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-2.png" 
-            style="float:left; height:140px; margin:10px; width:140px" />For the 9th consecutive year, Canada's first student-run hackathon, 
+            style="float:right; height:160px; margin:10px; width:160px" />For the 9th consecutive year, Canada's first student-run hackathon, 
             <a href="http://uofthacks.com/">UofT Hacks</a>, will bring together 500 innovators, technology enthusiasts, designers, and entrepreneurs in a thrilling competition where they will embark on a journey to build unique and impactful projects. Sponsors include Amazon, Ubisoft, FDM, Questrade, and Google Cloud.</p>
         </div>
 
         <div id="eventblurb">
 
-        <h2><span">Hack the Valley</span><img 
-            src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-3.png" 
-            style="float:right; height:200px; margin:10px; width:200px" /></h2>
+        <h2><span">Hack the Valley</span><img src="images/hackthevalley.png" 
+            style="float:right; height:300px; margin:10px" /></h2>
 
         <p><a href="http://hackthevalley.io/">Hack the Valley</a> hosted by University of Toronto Scarborough is an in-person hackathon that aims to connect 750 innovative and creative developers, designers, and creators for 36 hours of hacking. Run entirely by University of Toronto Students, the event consists of 4 areas for creation: Health, Nature, Technology, and Discovery. Sponsors include Amazon, TD, Accedo, Scotiabank, University of Toronto Scarborough, Loblaw Companies Limited, and Xero. &nbsp;</p>
 
@@ -112,7 +110,7 @@
             <h2><span>Hack the Pulse</span></h2>
 
             <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-4.png" 
-                style="float:left; height:138px; margin:10px; width:200px" />
+                style="float:right; height:138px; margin:10px; width:200px" />
                 <a href="http://hack-the-pulse.devpost.com/">Hack&nbsp;the Pulse 2022</a>&nbsp;will be <a href="http://mini.xdhacks.com/vancouver/">XdHacks Mini Vancouver</a>&rsquo;s first event of 2022. Within the span of 36 hours, teams will work together to develop digital ideas aimed towards helping confront healthcare challenges that societies encounter today. The event plans to bring together over 100 high school students from across Canada to gather for a fun weekend of hacking and networking. Last year, XdHacks Mini hosted Securehacks 2021 and <a href="http://mini.xdhacks.com/vancouver/climate-code">Climate Code 2021</a>.</p>
             </div>
 
@@ -128,8 +126,8 @@
         <div id="eventblurb">
             <h2><span>Jam Hacks 6</span></h2>
 
-            <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-6.png" 
-                style="float:left; height:120px; margin:10px; width:199px" />
+            <p><img src="images/jam_hacks.png" 
+                style="float:right; height:120px; margin:10px; width:200" />
                 <a href="http://jamhacks.ca/">Jam Hacks 6</a> is Waterloo's largest high school hackathon! JAMHacks 6 will take place virtually again in 2022 May, exact date TBD. Last year, JamHacks brought together 300 students from high schools all over North America for a full 24 hours of learning and creating! Sponsors include Toyota Motor Manufacturing, Quantstamp, University of Waterloo, Bestbuy, Hestia Academy, and Best Buy.</p>
             </div>
 
@@ -145,13 +143,13 @@
             <h2><span>McGill Physics Hackathon</span></h2>
 
             <p><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-8.png" 
-                style="float:left; height:175px; margin:10px; width:175px" />At its core, the <a href="http://www.physics.mcgill.ca/hackathon/">McGill Physics Hackathon</a> is a friendly computer programming competition. The goal is simple: over a 24-hour period, in a team of 2-5 people, put together some project which involves scientific computing and the physical sciences! There are no themes; the goal is to have fun and be creative. We want to welcome everyone into the wonderful world of scientific computing!</p>
+                style="float:right; height:175px; margin:10px; width:175px" />At its core, the <a href="http://www.physics.mcgill.ca/hackathon/">McGill Physics Hackathon</a> is a friendly computer programming competition. The goal is simple: over a 24-hour period, in a team of 2-5 people, put together some project which involves scientific computing and the physical sciences! There are no themes; the goal is to have fun and be creative. We want to welcome everyone into the wonderful world of scientific computing!</p>
         </div>
 
         <div id="eventblurb">
 
             <h2><span>Hack Western 8</span>
-                <img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-9.png" 
+                <img src="images/hack_western.png" 
                 style="float:right; height:175px; margin:10px; width:175px" /></h2>
 
             <p><a href="http://www.ivey.uwo.ca/scotiabank-digital-banking-lab/outreach/hackathon/">Hack Western</a> is an annual, student-run hackathon at Western University.' Students collaborate in teams of up to 4 to build web, mobile and hardware projects, while participating in workshops, learning from mentors and competing for prizes. Support from the Scotiabank Digital Banking Lab provides hackathon participants with the opportunity to explore digital disruption in the financial services industry, and delve deeper into topics ranging from user-centered design to cryptocurrencies.</p>
