--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="favicon icon" type="image/png" href="images/moose-favicon.png"/>
+
 </head>
 <body>
 
