--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 </head>
 <body>
+    <div id="logo"> 
+        <img src="images/canadian-hackathon-v2.png"> 
+    </div> 
 
     <h3>When's the next hackathon? Why should I attend? Here is a comprehensive breakdown of Canadian university and high school hackathons for 2022.</h3>
 
