--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <p><a href="http://hack-the-pulse.devpost.com/"><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-4.png" 
                 style="float:right; height:138px; margin:10px; width:200px" /></a>
-                <a href="http://hack-the-pulse.devpost.com/">Hack&nbsp;the Pulse 2022</a>&nbsp;will be <a href="http://mini.xdhacks.com/vancouver/">XdHacks Mini Vancouver</a>&rsquo;s first event of 2022. Within the span of 36 hours, teams will work together to develop digital ideas aimed towards helping confront healthcare challenges that societies encounter today. The event plans to bring together over 100 high school students from across Canada to gather for a fun weekend of hacking and networking. Last year, XdHacks Mini hosted Securehacks 2021 and <a href="http://mini.xdhacks.com/vancouver/climate-code">Climate Code 2021</a>.</p>
+                <a href="http://hack-the-pulse.devpost.com/">Hack the Pulse 2022</a> will be <a href="http://mini.xdhacks.com/vancouver/">XdHacks Mini Vancouver</a>&rsquo;s first event of 2022. Within the span of 36 hours, teams will work together to develop digital ideas aimed towards helping confront healthcare challenges that societies encounter today. The event plans to bring together over 100 high school students from across Canada to gather for a fun weekend of hacking and networking. Last year, XdHacks Mini hosted Securehacks 2021 and <a href="http://mini.xdhacks.com/vancouver/climate-code">Climate Code 2021</a>.</p>
             </div>
 
         <div id="eventblurb">
@@ -126,7 +126,7 @@
             <a href="http://cmd-f.nwplus.io/"><img src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023841-5.png" 
                 style="float:right; height:167px; margin:10px; width:200px" /></a>
 
-            <p><a href="http://cmd-f.nwplus.io/">Cmd-f 2022</a> will be an event held on International Women's Day. It'll be British Columbia&rsquo;s first and largest all-women hackathon, helping women explore new technologies and celebrate women in tech! Cmd-f was created to help break stereotypes and create a safe space for women to learn new skills, build confidence, and discover a creative community.</p>
+            <p><a href="http://cmd-f.nwplus.io/">Cmd-f 2022</a> will be an event held on International Women's Day. It'll be British Columbia's first and largest all-women hackathon, helping women explore new technologies and celebrate women in tech! Cmd-f was created to help break stereotypes and create a safe space for women to learn new skills, build confidence, and discover a creative community.</p>
         </div>
 
         <div id="eventblurb">
