added calgary hacks

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         
     </div>
 
-    <p>If you would like your event to be added to this list, please <a href="mailto:victork.zheng@mail.utoronto.ca">email me</a> and I'd be happy to add you to the list! Some other Canadian hackathons that may be happening this year include HackED, BC Hacks, TechNova, UOttawa Hacks, MacHacks, Hack the 6ix, SheHacks, and HackConcordia. More information will be added if / when it is confirmed that these hackathons will be taking place.</p>
+    <p>If you would like your event to be added to this list, please <a href="mailto:victork.zheng@mail.utoronto.ca">email me</a> and I'd be happy to add you to the list! Some other Canadian hackathons that may be happening this year include HackED, CalgaryHacks, BC Hacks, TechNova, UOttawa Hacks, MacHacks, Hack the 6ix, SheHacks, and HackConcordia. More information will be added if / when it is confirmed that these hackathons will be taking place.</p>
 
 
 </body>
