--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <tr>
                     <td>Hack the Valley</td>
                     <td>University of Toronto Scarborough</td>
-                    <td>February 25-27<br />
+                    <td>February 25-27 - POSTPONED<br />
                     </td>
                     <td>Online</td>
                 </tr>
