updated correct image

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
     <div class="event">
         <div id="eventblurb">
-            <h2><span>DeltaHacks</span><a href="https://www.deltahacks.com/"><img id="image", src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023734-1.png"/></a></h2>
+            <h2><span>DeltaHacks</span><a href="https://www.deltahacks.com/"><img id="image", src="images/delta-hacks.png"/></a></h2>
             <p><a href="https://www.deltahacks.com/">DeltaHacks</a> is the annual hackathon for change, it's even in the name! The primary focus of DeltaHacks is to enable hackers from all over to make a change, whether it be in education, finance, health or any other field, we're extremely passionate about hacking to make a positive change! We work with McMaster University to welcome hackers of all levels, from the novice to the most experienced! We supply the food, venue, and workshops to provide even the most seasoned veterans with new experiences. Now in our 8th year running, DeltaHacks 8 is our biggest and best DeltaHacks yet. Join us this March and take part in an experience you won’t forget!            </p>
         </div>
 
         <div id="eventblurb">
-            <h2><span>NwHacks</span><a href="https://www.nwhacks.io/"><img id="image", src="images/delta-hacks.png"/></a></h2>
+            <h2><span>NwHacks</span><a href="https://www.nwhacks.io/"><img id="image", src="https://media--bucket.s3.amazonaws.com/media/uploads/2022/02/05/image-20220205023734-1.png"/></a></h2>
             <p><a href="https://www.nwhacks.io/">NwHacks</a> is Western Canada's largest hackathon, attracting over 1200 participants in 2021. In 2021, they had over 200 projects, 45 mentors, and dozens of events. Their sponsors have included Amazon, Microsoft, TTT Studios, Kabam, and Deloitte. With a solid social media following, this will be a great way to start off your year!</p>
         </div>
 
