--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <tr>
                     <td>Jam Hacks 6</td>
                     <td>Jam Hacks</td>
-                    <td>May, TBD</td>
+                    <td>May 20-22</td>
                     <td>TBD</td>
                 </tr>
                 <tr>
